--- a/INDEX.html
+++ b/INDEX.html
@@ -28,7 +28,7 @@
             overflow: hidden;
             background: white;
             transition: max-height 0.3s ease, opacity 0.3s ease; /* Smooth animation */
-            max-height: 400px; /* Default height (adjust as needed) */
+            height: 429px; /* Default height (adjust as needed) */
             opacity: 1; /* Fully visible */
         }
         
@@ -165,7 +165,7 @@
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            margin: 10px 15px;
+            margin: 40px 15px;
             resize: none;
         }
 
