--- a/login.html
+++ b/login.html
@@ -114,7 +114,7 @@
         
         <div class="input-group">
             <label for="account-number">Número de Cliente</label>
-            <input type="text" id="account-number" placeholder="Ex: 839901046294">
+            <input type="text" id="account-number">
         </div>
         <button id="login-btn">
             <span id="loading-spinner" class="loading" style="display: none;"></span>
