a cor do ícone corrigida

--- a/static/index.html
+++ b/static/index.html
@@ -43,7 +43,7 @@
         }
         
         .chat-header {
-            background: var(--continente-red);
+            background: #eb0203;
             color: white;
             padding: 15px 20px;
             font-size: 20px;
